--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.5",
+    "@next/font": "^14.2.4",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.6.0",
+    "bcryptjs": "^2.4.3",
+    "cal-sans": "^1.0.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
